--- a/main/styles.css
+++ b/main/styles.css
@@ -171,6 +171,21 @@
           background-color: #f9f9f9;
       }
 
+.img-upload-btn {
+    background: #121212;
+    width: 128px;
+    text-align: center;
+    padding: 11px 19px;
+    margin: auto;
+    border-radius: 11px;
+    transition: all 0.3s ease;
+}
+
+.img-upload-btn:hover {
+    background: #303030;
+    box-shadow: 0 7px 20px rgb(31 40 84 / 40%);
+}
+
     .result-image {
       max-width: 100%;
       max-height: 70vh;
