--- a/main/styles.css
+++ b/main/styles.css
@@ -171,6 +171,10 @@
           background-color: #f9f9f9;
       }
 
+#prompt {
+    transition: none;
+}
+
 .img-upload-btn {
     background: #121212;
     width: 128px;
